--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,5 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/prostor"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+VK_CLIENT_ID=""
+VK_CLIENT_SECRET=""
